--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1 span {
     background-color: #171717;
     padding-top: 30px;
     padding-bottom: 50px;
-    height: 100vh;
+    min-height: calc(100vh - 40px);
     width: 100%;
 
 
@@ -131,18 +131,28 @@ h1 span {
 }
 
 .card {
-    height: 300px;
-    width: 200px;
+    height: 550px;
+    width: 250px;
     background-color: black;
     color: white;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 25px;
+    border-radius: 30px;
     margin-right: 30px;
-    font-size: 12px;
-    font-weight: 100;
+    font-size: 15px;
+    font-weight: 400;
+    gap: 25px;
+}
+
+.imgprojects{ 
+    width: 100%;
+    border-radius: 30px;
+}
+.card h5{
+    font-weight: 500;
+    font-size: 20px;
+    color: #7595e7;
 }
 
 .card p {
@@ -152,15 +162,16 @@ h1 span {
 .card a {
     background: #0137be;
     padding: 20px;
+    margin-bottom: 15px;
     border-radius: 30px;
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 300;
     text-decoration: none;
     color: white;
     cursor: pointer;
 }
 
-.card a :hover {
+.card a :active {
     background: transparent;
     border: 4px solid #0137be;
 }
@@ -255,6 +266,7 @@ footer p {
     height: 150px;  
     margin-bottom: 15px;   
 }
+
 .card p{
     display: none;
 }
