--- a/style.css
+++ b/style.css
@@ -148,8 +148,23 @@ h1 span {
 .imgprojects{ 
     width: 100%;
     border-radius: 30px;
+    transition: transform 0.5s;
+    cursor: pointer;
+    
 }
-.card h5{
+
+.card img{
+    width: 100%;
+    height: 100%;
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: transform .5s ease;
+ }
+ 
+ .card:hover img{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.9);}
+
+    .card h5{
     font-weight: 500;
     font-size: 20px;
     color: #7595e7;
@@ -171,7 +186,7 @@ h1 span {
     cursor: pointer;
 }
 
-.card a :active {
+.card :active {
     background: transparent;
     border: 4px solid #0137be;
 }
@@ -230,6 +245,7 @@ footer p {
     .content-principal,
     .content-discrition {
         flex-direction: column;
+        gap:100px
     }
 
     .name-home h1,
@@ -258,13 +274,17 @@ footer p {
     height: auto;
 }
 .card-content{    
-    flex-direction: column;
-    align-items: center;}
-.card{
-    width: 300px;
-    margin-left: 15px;
-    height: 150px;  
-    margin-bottom: 15px;   
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-rows: 300px 300px 300px;
+    gap: 60px;
+    margin-top: 35px;
+}
+    .card{
+       margin-bottom: 15px; 
+    width: 210px;
+    height: 350px;  
 }
 
 .card p{
