--- a/style.css
+++ b/style.css
@@ -5,10 +5,21 @@
     font-family: "Josefin Sans", sans-serif;
 }
 
+body{
+    background-color: #000000;
+}
 .content-home {
     height: 100vh;
     width: 100%;
-    background-color: #171717;
+   
+
+}
+
+.play-backgroud video {
+    position: fixed;
+    min-height: 100%;
+    min-width: 100%;
+    z-index: -1;
 
 }
 
@@ -30,6 +41,15 @@ nav {
 
 .content-home nav h3 span {
     color: #0137be;
+}
+
+.border-img{ 
+    border-radius: 100%;
+    box-shadow: inset -20px 7px 50px 9px #0137be;
+}
+.img-home {
+    height: 300px;
+    border-radius: 100px;
 }
 
 li {
@@ -57,9 +77,11 @@ li:hover {
 
 .content-principal {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin: 25px 40px 0;
+    flex-direction: column-reverse;
+    gap: 45px;
+    padding-top: 60px;
 }
 
 h1 {
@@ -81,9 +103,32 @@ h1 span {
 
 }
 
+.name-home{
+    width: 600px;
+    animation: digitando 5s steps(25), blink .4s infinite alternate ;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid;
+
+   
+   
+    transform:translate(0)
+}
+
+@keyframes digitando{
+    from{
+        width: 0;
+    }
+}
+
+@keyframes blink{
+    40%{
+        border-color: rgba(255, 255, 255, 0.2);
+    }
+}
 .content-discrition {
     width: 100%;
-    height: 100vh;
+   
     background: linear-gradient(90deg, rgba(23, 23, 23, 1) 14%, rgba(17, 34, 78, 1) 60%, rgba(1, 55, 190, 1) 100%);
     display: inline-flex;
     justify-content: center;
@@ -94,8 +139,12 @@ h1 span {
     color: white;
     font-size: 30px;
     font-weight: 500;
-    width: 500px;
-    padding-left: 50px;
+    padding: 25px;
+   height: max-content;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .discrition p {
@@ -106,7 +155,7 @@ h1 span {
 
 
 .projects {
-    background-color: #171717;
+   
     padding-top: 30px;
     padding-bottom: 50px;
     min-height: calc(100vh - 40px);
@@ -145,26 +194,27 @@ h1 span {
     gap: 25px;
 }
 
-.imgprojects{ 
+.imgprojects {
     width: 100%;
     border-radius: 30px;
     transition: transform 0.5s;
     cursor: pointer;
-    
+
 }
 
-.card img{
+.card img {
     width: 100%;
     height: 100%;
     -webkit-transition: -webkit-transform .5s ease;
     transition: transform .5s ease;
- }
- 
- .card:hover img{
-    -webkit-transform: scale(1.1);
-    transform: scale(1.9);}
+}
 
-    .card h5{
+.card:hover img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.9);
+}
+
+.card h5 {
     font-weight: 500;
     font-size: 20px;
     color: #7595e7;
@@ -230,13 +280,19 @@ footer p {
     border: 4px solid #0137be;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 800px) {
     nav {
         flex-direction: column;
         align-items: baseline;
     }
 
-    .content-home nav h3 , li{
+    .name-home{
+        width: max-content;
+     white-space: normal;
+    }
+
+    .content-home nav h3,
+    li {
         font-size: 20px;
         margin-right: 4px;
 
@@ -245,13 +301,13 @@ footer p {
     .content-principal,
     .content-discrition {
         flex-direction: column;
-        gap:100px
+        
     }
 
     .name-home h1,
     .projects h4 {
         margin-top: 50px;
-        font-size: 30px;
+        font-size: 35px;
     }
 
     .img-home img {
@@ -262,46 +318,51 @@ footer p {
         height: 300px;
     }
 
-    .discrition
-    {
+    .discrition {
 
-    font-size: 20px;
-    max-width: 300px;
+        font-size: 20px;
+        max-width: auto;
 
-}
+    }
 
-.projects{
-    height: auto;
-}
-.card-content{    
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-rows: 300px 300px 300px;
-    gap: 60px;
-    margin-top: 35px;
-}
-    .card{
-       margin-bottom: 15px; 
-    width: 210px;
-    height: 350px;  
-}
+    .projects {
+        height: auto;
+    }
 
-.card p{
-    display: none;
-}
-footer{
-    height: 100px;
-flex-direction: row;
-}
-footer h5  {
-    display: none;
-}
-.links{
-    gap: 10px;
-}
-.links a img {
-    height: 30px;
+    .card-content {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-template-rows: 300px 300px 300px;
+        gap: 60px;
+        margin-top: 35px;
+    }
 
-}
+    .card {
+        margin-bottom: 15px;
+        width: 210px;
+        height: 350px;
+    }
+
+    .card p {
+        display: none;
+    }
+
+    footer {
+        height: 100px;
+        flex-direction: row;
+    }
+
+    footer h5 {
+        display: none;
+    }
+
+    .links {
+        gap: 10px;
+    }
+
+    .links a img {
+        height: 30px;
+
+    }
 }
