--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
     font-family: "Josefin Sans", sans-serif;
 }
 
-body{
+body {
     background-color: #000000;
+    scrollbar-width: none;
 }
+
 .content-home {
-    height: 100vh;
+    height: auto;
     width: 100%;
-   
+
 
 }
 
@@ -23,149 +30,322 @@ body{
 
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
+
+
+.whatsapp img {
+    height: 10vh;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
 
 }
 
-.content-home nav h3 {
-    color: white;
-    font-size: 40px;
-    font-weight: 500;
-    margin-top: 20px;
-    margin-left: 40px;
+
+.mascara-backgroud {
+    position: fixed;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4458158263305322) 50%, rgba(7, 7, 7, 1) 100%);
+    min-height: 100%;
+    min-width: 100%;
+    z-index: -1;
 }
 
-.content-home nav h3 span {
-    color: #0137be;
+.mascara-form {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7)50%, rgba(10, 12, 16, 0.99)85%);
+    transition: visibility 1s ease-in-out;
+
 }
 
-.border-img{ 
-    border-radius: 100%;
-    box-shadow: inset -20px 7px 50px 9px #0137be;
-}
 .img-home {
-    height: 300px;
+    height: 150px;
     border-radius: 100px;
+    margin-left: 37px;
+    position: fixed;
 }
 
-li {
-    list-style: none;
-    display: inline-block;
+form {
+    height:auto;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    left: -900px;
+    top:10px;
+    padding: 8px;
+    border-radius: 15px;
+    gap: 20px;
+    align-items: center;
+    transition: left 1s ease-in-out;
+
+
+}
+
+#scroll-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.form-information {
+    width: 300px;
+    display: flex;
+    align-items: center;
+
+    flex-direction: column;
+
+}
+
+.checkbox {
+    width: 20px;
+}
+
+h4,
+h5 {
+    font-family: "Roboto", sans-serif;
     font-size: 25px;
-    font-weight: 200;
-    margin-right: 90px;
-    margin-top: 20px;
+    font-weight: bold;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 15px;
+
+}
+
+h5 {
+    width: 150px;
+    text-decoration-line: overline;
+
+}
+
+.form-information p {
+    font-family: "Roboto", sans-serif;
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #000000;
+
+}
+
+.form-information p span {
+    font-family: "Roboto", sans-serif;
+    color: rgb(72, 72, 73);
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.input-form {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+input {
+    width: 300px;
+    height: 40px;
+    border-radius: 100px;
+    border: 3px solid gray;
+    padding-left: 50px;
+    font-family: "Roboto", sans-serif;
+    color: rgb(72, 72, 73);
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+textarea {
+    height: 250px;
+    width: 270px;
+    border-radius: 10px;
+    border: 1px solid gray;
+    padding: 10px;
+    text-align: center;
+    outline-color: #000000;
+    font-family: "Roboto", sans-serif;
+    color: rgb(72, 72, 73);
+    font-size: 15px;
+    font-weight: bold;
+
+}
+
+#button-form {
+    height: 130px;
+    font-size: 25px;
+    color: #ffffff;
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 30px;
+    border: 1px solid black;
     cursor: pointer;
-    color: white;
-
+    background: linear-gradient(90deg, rgba(37, 60, 227, 0.8995973389355743) 0%, rgba(185, 54, 103, 0.7539390756302521) 100%);
 }
 
-li:hover {
-    color: #0137be;
-    transition: 0.5s;
-
+#button-form:hover {
+    font-size: 30px;
+    transition: 0.3s ease-in-out;
 }
 
-.li-home {
-    text-decoration: none;
-    color: white;
+#button-form:active {
+    opacity: 0.5;
+    transition: 0.5s ease-in-out;
 }
+
 
 .content-principal {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column-reverse;
-    gap: 45px;
-    padding-top: 60px;
+    flex-direction: column;
+    gap: 15px;
+    padding-top: 40px;
 }
 
 h1 {
-    font-size: 70px;
-    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    font-size: 45px;
+    font-weight: bold;
     color: white;
+    text-align: center;
+    width: 700px;
+    text-decoration-line: overline;
 
 }
 
-h1 span {
-    color: #0137be;
-}
-
-.name-home p {
-    color: white;
-    font-size: 15px;
+.paragriph-home {
+    font-family: "Roboto", sans-serif;
     font-weight: 200;
-    padding-left: 30px;
+    width: 500px;
+    color: white;
+    font-size: 20px;
+    animation: digitando 3s steps(25), blink linear infinite alternate;
+    text-align: center;
 
 }
 
-.name-home{
-    width: 600px;
-    animation: digitando 5s steps(25), blink .4s infinite alternate ;
-    white-space: nowrap;
-    overflow: hidden;
-    border-right: 2px solid;
-
-   
-   
-    transform:translate(0)
+p span {
+    font-family: "Roboto", sans-serif;
+    color: rgb(62, 116, 252);
+    font-size: 20px;
+    font-weight: bold;
 }
 
-@keyframes digitando{
-    from{
+.name-home {
+    width: 700px;
+
+}
+
+@keyframes digitando {
+    from {
         width: 0;
     }
 }
 
-@keyframes blink{
-    40%{
+@keyframes blink {
+    40% {
         border-color: rgba(255, 255, 255, 0.2);
     }
 }
-.content-discrition {
+
+
+.element-service {
     width: 100%;
-   
+    height: auto;
     background: linear-gradient(90deg, rgba(23, 23, 23, 1) 14%, rgba(17, 34, 78, 1) 60%, rgba(1, 55, 190, 1) 100%);
-    display: inline-flex;
-    justify-content: center;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 0 250px 0 250px;
+
+
+
 }
 
+
+.element-descrition-service,
 .discrition {
     color: white;
     font-size: 30px;
     font-weight: 500;
     padding: 25px;
-   height: max-content;
+    height: max-content;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
 
+.element-descrition-service p,
 .discrition p {
     margin-top: 30px;
     font-size: 25px;
-    font-weight: 100;
+    font-weight: 300;
+
+
 }
 
+.element-descrition-service,
+.content-discrition {
+    text-align: center;
+    width: 700px;
+    text-wrap: wrap;
+
+}
+
+.element-descrition-service span {
+
+    color: #ffff;
+    font-size: 30px;
+    font-weight: bolder;
+    -webkit-text-stroke: .2px #2c2929;
+
+}
+
+.element-descrition-service-button {
+    font-size: 25px;
+    color: #ffffff;
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 30px;
+    border: 1px solid black;
+    cursor: pointer;
+    background: linear-gradient(90deg, rgba(37, 60, 227, 0.8995973389355743) 0%, rgba(185, 54, 103, 0.7539390756302521) 100%);
+}
+
+.element-descrition-service-button:hover {
+    font-size: 30px;
+
+    transition: 0.3s ease-in-out;
+}
+
+.element-descrition-service-button:active {
+    opacity: 0.5;
+    transition: 0.5s ease-in-out;
+}
 
 .projects {
-   
-    padding-top: 30px;
+
+    padding-top: 100px;
     padding-bottom: 50px;
-    min-height: calc(100vh - 40px);
+
     width: 100%;
 
 
 
 }
 
-.projects h4 {
+.projects h4,
+h3 {
     color: white;
     font-size: 55px;
     font-weight: 300;
@@ -174,72 +354,93 @@ h1 span {
 
 .card-content {
     display: flex;
+    position: relative;
+    height: 450px;
     align-items: center;
-    justify-content: center;
-    padding-top: 50px;
+    mask-image: linear-gradient(to right, transparent, #000 10% 90%);
+
 }
 
 .card {
-    height: 550px;
-    width: 250px;
-    background-color: black;
-    color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 30px;
-    margin-right: 30px;
-    font-size: 15px;
-    font-weight: 400;
-    gap: 25px;
+
+    height: auto;
+    width: 100%;
+    left: 100%;
+    position: absolute;
+    animation: autoRun 10s linear infinite;
+    animation-delay: var(--delay) !important;
+
 }
 
+.reverse {
+
+    animation: reverseRun 10s linear infinite;
+
+}
+
+.card-content:hover .card {
+    animation-play-state: paused;
+
+}
+
+.button-projects :active a {
+    background: transparent;
+    border: 4px solid #0137be;
+}
+
+@keyframes autoRun {
+    from {
+        left: 100%;
+    }
+
+    to {
+        left: -100px;
+    }
+}
+
+@keyframes reverseRun {
+    from {
+        left: -100px;
+    }
+
+    to {
+        left: 100%;
+    }
+}
+
+
 .imgprojects {
-    width: 100%;
-    border-radius: 30px;
-    transition: transform 0.5s;
+    width: 500px;
     cursor: pointer;
 
 }
 
-.card img {
-    width: 100%;
-    height: 100%;
-    -webkit-transition: -webkit-transform .5s ease;
-    transition: transform .5s ease;
-}
 
-.card:hover img {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.9);
-}
 
-.card h5 {
-    font-weight: 500;
-    font-size: 20px;
-    color: #7595e7;
-}
-
-.card p {
-    margin: 30px 15px;
-}
-
-.card a {
-    background: #0137be;
+.button-projects a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0137beab;
     padding: 20px;
-    margin-bottom: 15px;
+    width: 350px;
     border-radius: 30px;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 300;
     text-decoration: none;
     color: white;
     cursor: pointer;
 }
 
-.card :active {
-    background: transparent;
-    border: 4px solid #0137be;
+.content-discrition {
+    width: 100%;
+
+    background: linear-gradient(90deg, rgba(23, 23, 23, 1) 14%, rgba(17, 34, 78, 1) 60%, rgba(1, 55, 190, 1) 100%);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 footer {
     background: black;
@@ -286,9 +487,10 @@ footer p {
         align-items: baseline;
     }
 
-    .name-home{
-        width: max-content;
-     white-space: normal;
+    .name-home,
+    .element-descrition-service {
+        width: auto;
+        text-wrap: balance;
     }
 
     .content-home nav h3,
@@ -301,21 +503,76 @@ footer p {
     .content-principal,
     .content-discrition {
         flex-direction: column;
-        
+
     }
 
     .name-home h1,
+    h3,
     .projects h4 {
-        margin-top: 50px;
         font-size: 35px;
+        width: auto;
+
     }
 
-    .img-home img {
-        height: 300px;
+    .paragriph-home {
+        width: auto;
     }
 
-    .content-discrition img {
-        height: 300px;
+    .img-home {
+        height: 100px;
+    }
+
+    .element-service {
+        padding: 150px 10px
+    }
+
+    .element-descrition-service {
+        padding: 0;
+
+    }
+
+    .element-descrition-service p,
+    .element-descrition-service p span {
+        font-size: 20px;
+        max-width: auto;
+    }
+
+    .whatsapp img {
+        height: 7vh;
+    }
+
+    form {
+        flex-direction: column;
+        height:100%;
+    }
+
+    h5 {
+        font-size: 20px;
+        width: auto;
+    }
+
+    #element-check {
+        display: inline-block;
+        font-weight: bold;
+    }
+
+    #scroll-form {
+        overflow: visible;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    #button-form {
+        width: 300px;
+        padding: 25px;
+
+    }
+
+    h5 {
+        margin-top: 10px;
+        font-size: 20px;
     }
 
     .discrition {
@@ -327,30 +584,80 @@ footer p {
 
     .projects {
         height: auto;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+
+
+    .imgprojects {
+        width: 350px;
     }
 
     .card-content {
-        display: grid;
-        justify-content: center;
+        width: 350px;
+        display: flex;
+        position: relative;
+        height: 550px;
         align-items: center;
-        grid-template-rows: 300px 300px 300px;
-        gap: 60px;
-        margin-top: 35px;
+        justify-content: center;
+        mask-image: none;
+        border: 5px solid #ffffff;
+        border-radius: 30px;
     }
 
-    .card {
-        margin-bottom: 15px;
-        width: 210px;
-        height: 350px;
+    .card,
+    .reverse {
+
+        height: auto;
+        width: 100%;
+        top: 100%;
+        left: 0;
+        position: absolute;
+        animation: autoRun 10s linear infinite;
+        animation-delay: var(--delay) !important;
+
     }
 
-    .card p {
-        display: none;
+
+
+    .card-content:hover .card {
+        animation-play-state: paused;
+        filter: grayscale(1);
+
     }
+
+    .card-content.card:hover img {
+        filter: grayscale(0);
+    }
+
+    .button-projects :active a {
+        background: transparent;
+        border: 4px solid #0137be;
+    }
+
+    @keyframes autoRun {
+        from {
+            top: 100%;
+        }
+
+        to {
+            top: -100px;
+        }
+    }
+
+
 
     footer {
         height: 100px;
         flex-direction: row;
+        padding-left: 10px;
+        justify-content: flex-start;
+
     }
 
     footer h5 {
