--- a/style.css
+++ b/style.css
@@ -10,6 +10,30 @@
     font-family: "Josefin Sans", sans-serif;
 }
 
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(28, 3, 173);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #2d1446;
+}
+
 body {
     background-color: #000000;
     scrollbar-width: none;
@@ -68,20 +92,20 @@ body {
 }
 
 form {
-    height:auto;
+    overflow: hidden;
+    height: 95vh;
+    width: 700px;
     background-color: white;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: fixed;
     left: -900px;
-    top:10px;
+    top: 10px;
     padding: 8px;
     border-radius: 15px;
     gap: 20px;
     align-items: center;
     transition: left 1s ease-in-out;
-
-
 }
 
 #scroll-form {
@@ -92,11 +116,14 @@ form {
 
 .container-form {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    height: 86vh;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: flex-start;
     flex-wrap: wrap;
+    gap: 9px;
 }
+
 
 .form-information {
     width: 300px;
@@ -107,9 +134,7 @@ form {
 
 }
 
-.checkbox {
-    width: 20px;
-}
+
 
 h4,
 h5 {
@@ -150,7 +175,13 @@ h5 {
     justify-content: center;
 }
 
-input {
+.input-form a img {
+    height: 20px;
+    margin-left: 10px;
+}
+
+input,
+.input-form select {
     width: 300px;
     height: 40px;
     border-radius: 100px;
@@ -164,8 +195,8 @@ input {
 }
 
 textarea {
-    height: 250px;
-    width: 270px;
+    height: 217px;
+    width: 300px;
     border-radius: 10px;
     border: 1px solid gray;
     padding: 10px;
@@ -179,11 +210,11 @@ textarea {
 }
 
 #button-form {
-    height: 130px;
-    font-size: 25px;
+    height: 50px;
+    width: 156px;
+    font-size: 22px;
     color: #ffffff;
     margin: 10px 0;
-    padding: 15px;
     border-radius: 30px;
     border: 1px solid black;
     cursor: pointer;
@@ -191,13 +222,36 @@ textarea {
 }
 
 #button-form:hover {
-    font-size: 30px;
+    font-size: 22px;
     transition: 0.3s ease-in-out;
 }
 
 #button-form:active {
     opacity: 0.5;
     transition: 0.5s ease-in-out;
+}
+
+.response-status-form {
+        background: linear-gradient(#f3ebebd4, #00000054) padding-box, linear-gradient(to right, #2813f7, #566bdf, #9914b8) border-box;
+    height: 40vh;
+    width: 400px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: -900px;
+    top: 10px;
+    padding: 18px;
+    border-radius: 15px;
+    gap: 20px;
+    align-items: center;
+    transition: left 0.5s ease-in-out;
+    justify-content: center;
+    font-size: 22px;
+    font-weight: 600;
+    color: #080000;
+    text-align: center;
+    border: 3px solid transparent;
 }
 
 
@@ -317,9 +371,9 @@ p span {
     margin: 10px 0;
     padding: 15px;
     border-radius: 30px;
-    border: 1px solid black;
     cursor: pointer;
-    background: linear-gradient(90deg, rgba(37, 60, 227, 0.8995973389355743) 0%, rgba(185, 54, 103, 0.7539390756302521) 100%);
+    background: linear-gradient(rgba(37, 60, 227, 0.8995973389355743), rgba(0, 0, 0, 1)) padding-box, linear-gradient(to left bottom, rgba(0, 0, 0, 1), #2813f7, rgba(0, 0, 0, 1), #8f8fa2, rgba(0, 0, 0, 1), #080808, #000000f0, #000, #ffffff, #ffffff, #ffffff, #0704eff2) border-box;
+    border: 3px solid transparent;
 }
 
 .element-descrition-service-button:hover {
@@ -331,6 +385,153 @@ p span {
 .element-descrition-service-button:active {
     opacity: 0.5;
     transition: 0.5s ease-in-out;
+}
+
+
+
+.serction-services-inform {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    width: 100%;
+    align-items: flex-end;
+
+}
+
+
+
+.element-text-services-inform {
+    display: flex;
+    width: auto;
+    height: 780px;
+    padding: 0 15px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    font-family: "Roboto", sans-serif;
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: 200;
+    border-radius: 40px;
+    box-shadow: -12px 0px 20px 7px #464545;
+    margin-top: 50px;
+    margin-left: 80px;
+    margin-bottom: 50px;
+    text-wrap: pretty;
+
+}
+
+#information {
+    width: 540px;
+    font-size: 25px;
+    text-align: center;
+}
+
+.element-text-services-inform h5 {
+    color: #ffffff;
+    width: auto;
+    border-bottom: 3px solid white;
+    font-size: 34px;
+    font-weight: 800;
+
+}
+
+.list-service-inform {
+    display: grid;
+    grid-template-columns: 356px 356px;
+    gap: 15px;
+}
+
+.list-itens {
+    border: 2px solid rgb(156, 153, 153);
+    border-radius: 30px;
+    padding: 15px;
+    width: auto;
+    color: #ffffff;
+    font-size: 19px;
+    font-weight: 300;
+}
+
+.element-text-services-inform a {
+    background: linear-gradient(#111111, #000000) padding-box, linear-gradient(to left bottom, #0636e7, #2813f7, #7115e7fa, #8f8fa2, #080000f7, #080808, #000000f0, #000, #ffffff, #7115e7fa, #0c06ff, #0704eff2) border-box;
+    border-radius: 50em;
+    border: 3px solid transparent;
+    position: static;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 0.5em 1.5em;
+    cursor: pointer;
+}
+
+.element-robo-img {
+    position: static;
+
+
+}
+
+.element-robo-img img {
+    width: 400px;
+}
+
+.section-itens-dk {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: center;
+}
+
+.section-itens-dk h4 {
+    color: #ffffff;
+}
+
+.itens-grid {
+    display: grid;
+    grid-template-columns: 400px 400px;
+    color: #ffffff;
+    justify-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+.grid-service {
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: linear-gradient(#000000de, #000000de) padding-box, linear-gradient(to left bottom, #0636e7, #2813f7, #efefefeb, #303033, #080000f7, #080808, #000000f0, #000, #303033, #f2f1f9fa, #0c06ff, #0704eff2) border-box;
+    border: 3px solid transparent;
+}
+
+
+.grid-service a {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to right, #2813f7, #566bdf, #ffffffb0) border-box;
+    border-radius: 50em;
+    border: 3px solid transparent;
+    position: static;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    font-size: 21px;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 0.5em 1.5em;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.grid-service h5 {
+
+    color: #ffffff;
+    width: auto;
 }
 
 .projects {
@@ -543,7 +744,9 @@ footer p {
 
     form {
         flex-direction: column;
-        height:100%;
+        height: 95vh;
+        width: 90vw;
+
     }
 
     h5 {
@@ -551,9 +754,13 @@ footer p {
         width: auto;
     }
 
-    #element-check {
-        display: inline-block;
-        font-weight: bold;
+    .container-form {
+        display: grid;
+    }
+
+    .container-form h4 {
+        font-size: 20px;
+        margin: 0;
     }
 
     #scroll-form {
@@ -565,9 +772,16 @@ footer p {
 
 
     #button-form {
-        width: 300px;
-        padding: 25px;
+        padding: 10px 25px;
+        height: 46px;
+        margin: 0;
 
+    }
+
+    .response-status-form {
+
+        height: 36vh;
+        width: 90vw;
     }
 
     h5 {
@@ -608,6 +822,7 @@ footer p {
         mask-image: none;
         border: 5px solid #ffffff;
         border-radius: 30px;
+        scrollbar-width: none;
     }
 
     .card,
@@ -672,4 +887,59 @@ footer p {
         height: 30px;
 
     }
+
+    .section-itens-dk {
+        height: auto;
+    }
+
+    .section-itens-dk h4 {
+
+        height: 66px;
+        width: 100%;
+        font-size: 21px;
+    }
+
+    .serction-services-inform {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .element-text-services-inform {
+        height: auto;
+        margin-left: 0;
+        margin-bottom: 0;
+        padding-bottom: 15px;
+    }
+
+    .element-text-services-inform a {
+        font-size: 24px;
+    }
+
+    #information {
+        width: auto;
+    }
+
+    .list-service-inform {
+        grid-template-columns: auto;
+    }
+
+    .element-robo-img img {
+        width: 200px;
+    }
+
+    .grid-service {
+        height: 400px;
+    }
+
+    .itens-grid {
+        grid-template-columns: auto;
+    }
+
+
+
+
+
+
+
+
 }
