--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
     background: #2d1446;
 }
 
+.titulo-projects , .titulo {
+    visibility: hidden;
+}
+
 body {
     background-color: #000000;
     scrollbar-width: none;
@@ -536,102 +540,103 @@ p span {
 
 .projects {
 
-    padding-top: 100px;
-    padding-bottom: 50px;
-
-    width: 100%;
-
-
-
-}
-
-.projects h4,
-h3 {
-    color: white;
-    font-size: 55px;
-    font-weight: 300;
-    text-align: center;
-}
-
-.card-content {
+    background: linear-gradient(173deg, rgba(5, 5, 5, 0.5410539215686274) 43%, rgba(240, 241, 245, 0.6194852941176471) 83%);
     display: flex;
-    position: relative;
-    height: 450px;
-    align-items: center;
-    mask-image: linear-gradient(to right, transparent, #000 10% 90%);
-
-}
-
-.card {
-
+    width: 100vw;
     height: auto;
-    width: 100%;
-    left: 100%;
-    position: absolute;
-    animation: autoRun 10s linear infinite;
-    animation-delay: var(--delay) !important;
-
-}
-
-.reverse {
-
-    animation: reverseRun 10s linear infinite;
-
-}
-
-.card-content:hover .card {
-    animation-play-state: paused;
-
-}
-
-.button-projects :active a {
-    background: transparent;
-    border: 4px solid #0137be;
-}
-
-@keyframes autoRun {
-    from {
-        left: 100%;
-    }
-
-    to {
-        left: -100px;
-    }
-}
-
-@keyframes reverseRun {
-    from {
-        left: -100px;
-    }
-
-    to {
-        left: 100%;
-    }
-}
-
-
-.imgprojects {
-    width: 500px;
-    cursor: pointer;
-
-}
-
-
-
-.button-projects a {
-    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background: #0137beab;
-    padding: 20px;
-    width: 350px;
-    border-radius: 30px;
-    font-size: 20px;
-    font-weight: 300;
-    text-decoration: none;
+}
+
+.titulo-projects{
     color: white;
+    padding: 30px 20px 0;
+    position: absolute;
+    font-size: 57px;
+    font-weight: 300;
+}
+
+.container-projects {
+    display: inline-flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    flex-direction: row;
+    align-items: flex-end;
+    margin-top: 40px;
+}
+
+#phone-projects{
+    visibility: hidden;
+   
+    width: 430px;
+    position: absolute;
+    z-index: 1;
+    left: 4%;
+
+}
+#desk-projects{
+    visibility: hidden;
+    position: absolute;
+    
+    width: 830px;
+}
+#tablet-projects{
+    visibility: hidden;
+    position: absolute;
+    width: 42%;
+    height: auto;
+    left: 60%;
+    z-index: 1;
+
+}
+.link-projects-d{
+    display: flex;
+    height: 76px;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 78px;
+    gap: 30px
+}
+
+.arrow-projects{
+    width: 75px;
+    cursor: pointer;
+   
+}
+.buttonProjects{
+    background-color:transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 1;
+}
+
+button :hover {
+
+    opacity: 0.7;
+    
+}
+
+
+.link-projects{
+    width: auto;
+    height: 60px;
+    background: linear-gradient(#111111, #000000) padding-box, linear-gradient(to left bottom, #0636e7, #2813f7, #7115e7fa, #8f8fa2, #080000f7, #080808, #000000f0, #000, #ffffff, #7115e7fa, #0c06ff, #0704eff2) border-box;
+    border-radius: 50em;
+    border: 3px solid transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 0.5em 1.5em;
     cursor: pointer;
 }
+
 
 .content-discrition {
     width: 100%;
@@ -682,7 +687,43 @@ footer p {
     border: 4px solid #0137be;
 }
 
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 1300px){ 
+    .serction-services-inform{
+        flex-direction: column;
+        align-items: center;
+
+    }  
+    
+    .container-projects{
+        height: 60vh;
+    }
+    #phone-projects{
+            left: 0%;
+            width: 321px;
+            position: relative;
+    }
+
+    #desk-projects{
+ 
+        width: 646px;
+
+    }
+
+    #tablet-projects{  
+          width: 470px;
+          left: 18%;
+          position: relative;
+
+    }
+}
+
+    @media screen and(max-width:1000pX){
+
+        
+    }
+
+@media screen and (max-width: 500px) {
     nav {
         flex-direction: column;
         align-items: baseline;
@@ -708,8 +749,8 @@ footer p {
     }
 
     .name-home h1,
-    h3,
-    .projects h4 {
+    h3
+    {
         font-size: 35px;
         width: auto;
 
@@ -763,12 +804,6 @@ footer p {
         margin: 0;
     }
 
-    #scroll-form {
-        overflow: visible;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
 
 
     #button-form {
@@ -797,73 +832,38 @@ footer p {
     }
 
     .projects {
-        height: auto;
-        display: flex;
-        flex-flow: wrap;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
+        
 
     }
-
-
-
-    .imgprojects {
-        width: 350px;
+    .container-projects{
+        height:424px;
+        margin-top: 0;
     }
 
-    .card-content {
-        width: 350px;
-        display: flex;
+    #phone-projects{
+        width: 600px;
         position: relative;
-        height: 550px;
-        align-items: center;
-        justify-content: center;
-        mask-image: none;
-        border: 5px solid #ffffff;
-        border-radius: 30px;
-        scrollbar-width: none;
-    }
-
-    .card,
-    .reverse {
-
-        height: auto;
-        width: 100%;
-        top: 100%;
         left: 0;
-        position: absolute;
-        animation: autoRun 10s linear infinite;
-        animation-delay: var(--delay) !important;
 
     }
 
-
-
-    .card-content:hover .card {
-        animation-play-state: paused;
-        filter: grayscale(1);
-
+    #desk-projects{
+        width: 375px;
+        height: auto;
     }
 
-    .card-content.card:hover img {
-        filter: grayscale(0);
+    #tablet-projects{
+        min-width: 66%;
+    height: auto;
+    left: 11%;
+position: relative;
+    }
+    .link-projects-d{    
+        bottom: 30px;
     }
 
-    .button-projects :active a {
-        background: transparent;
-        border: 4px solid #0137be;
-    }
 
-    @keyframes autoRun {
-        from {
-            top: 100%;
-        }
-
-        to {
-            top: -100px;
-        }
-    }
+    
 
 
 
